// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions infixQuery attribute 1`] = `
{
  "match": {
    "data.attribute.materialSampleName.infix": {
      "query": "searchValue",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions infixQuery relationship 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "match": {
              "included.attributes.dwcRecordNumber.infix": {
                "query": "searchValue",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery attribute (not optimized) 1`] = `
{
  "prefix": {
    "data.attribute.materialSampleName": {
      "case_insensitive": true,
      "value": "searchValue",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery attribute (not optimized, keyword support) 1`] = `
{
  "prefix": {
    "data.attribute.materialSampleName.keyword": {
      "case_insensitive": true,
      "value": "searchValue",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery attribute (optimized) 1`] = `
{
  "prefix": {
    "data.attribute.materialSampleName.prefix": {
      "case_insensitive": true,
      "value": "searchValue",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery relationship (not optimized) 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "prefix": {
              "included.attributes.dwcRecordNumber": {
                "case_insensitive": true,
                "value": "searchValue",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery relationship (not optimized, keyword support) 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "prefix": {
              "included.attributes.dwcRecordNumber.keyword": {
                "case_insensitive": true,
                "value": "searchValue",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions prefixQuery relationship (optimized) 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "prefix": {
              "included.attributes.dwcRecordNumber.prefix": {
                "case_insensitive": true,
                "value": "searchValue",
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions suffixQuery attribute 1`] = `
{
  "prefix": {
    "data.attribute.materialSampleName.prefix_reverse": "eulavhcraes",
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Partial matching query helper functions suffixQuery relationship 1`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "prefix": {
              "included.attributes.dwcRecordNumber.prefix_reverse": "eulavhcraes",
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions betweenQuery tests 1`] = `
{
  "range": {
    "data.attribute.numberExample": {
      "gte": 2,
      "lte": 5,
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions betweenQuery tests 2`] = `
{
  "range": {
    "data.attribute.materialSampleName.keyword_numeric": {
      "gte": "Test100",
      "lte": "Test200",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions betweenQuery tests 3`] = `
{
  "nested": {
    "path": "included",
    "query": {
      "bool": {
        "must": Array [
          {
            "range": {
              "included.attributes.dwcRecordNumber": {
                "gte": 10.5,
                "lte": 293,
              },
            },
          },
          {
            "term": {
              "included.type": "collecting-event",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions existsQuery 1`] = `
{
  "exists": {
    "field": "fieldTest",
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2023-01-01",
                "lte": "2023-01-01",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 2`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2023-01-01",
                "lte": "2023-01-01",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 3`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 4`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2023-01-01",
                "lte": "2023-01-01",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 5`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2023-01-01",
                "lte": "2023-01-01",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 6`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 7`] = `{}`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inDateQuery 8`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "1998-05-19",
                "lte": "1998-05-19",
                "time_zone": "UTC",
              },
            },
          },
          {
            "range": {
              "fieldTest": {
                "format": "yyyy-MM-dd",
                "gte": "2005-09-23",
                "lte": "2005-09-23",
                "time_zone": "UTC",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 1`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest.keyword": Array [
          "test1",
          "test2",
          "TEST3",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 2`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest": Array [
          "test1",
          "test2",
          "TEST3",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 3`] = `
{
  "bool": {
    "must_not": {
      "terms": {
        "fieldTest.keyword": Array [
          "test1",
          "test2",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 4`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest.keyword": Array [
          "test1",
          "test2",
          "test3",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 5`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest.keyword": Array [
          "test1",
          "test2",
          "test3",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 6`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest.keyword": Array [
          "TEST1",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 7`] = `{}`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inQuery 8`] = `
{
  "bool": {
    "must": {
      "terms": {
        "fieldTest.keyword": Array [
          "test1",
          "test2",
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inRangeQuery 1`] = `
{
  "bool": {
    "should": Array [
      {
        "range": {
          "fieldTest": {
            "gte": "1998-05-19",
            "lte": "1998-05-19",
          },
        },
      },
      {
        "range": {
          "fieldTest": {
            "gte": "2023-03-02",
            "lte": "2023-03-02",
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 1`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "TEST3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 2`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "fieldTest": {
                "case_insensitive": true,
                "value": "TEST3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 3`] = `
{
  "bool": {
    "must_not": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 4`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 5`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 6`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "TEST1",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 7`] = `{}`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions inTextQuery 8`] = `
{
  "bool": {
    "must": {
      "bool": {
        "minimum_should_match": 1,
        "should": Array [
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          {
            "term": {
              "fieldTest.keyword": {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions includedTypeQuery 1`] = `
{
  "term": {
    "included.type": "parentTest",
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions rangeQuery 1`] = `
{
  "range": {
    "fieldTest": {
      "lt": 500,
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions termQuery 1`] = `
{
  "term": {
    "fieldTest.keyword": "valueToMatch",
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions termQuery 2`] = `
{
  "term": {
    "fieldTest": "valueToMatch",
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions wildcard 1`] = `
{
  "wildcard": {
    "fieldTest": {
      "case_insensitive": true,
      "value": "*valueToMatch*",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality Query helper functions wildcard 2`] = `
{
  "wildcard": {
    "fieldTest.keyword": {
      "case_insensitive": true,
      "value": "*valueToMatch*",
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyGroupFilters Multiple groups 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
        {
          "terms": {
            "data.attributes.group.keyword": Array [
              "aafc",
              "cnc",
              "seqdb",
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyGroupFilters No groups 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyGroupFilters Single group 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
        {
          "term": {
            "data.attributes.group.keyword": "aafc",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyPagination Pagination is correctly applied to query 1`] = `
{
  "from": 0,
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "size": 25,
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyPagination Pagination is correctly applied to query 2`] = `
{
  "from": 100,
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "size": 100,
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyRootQuery Boolean logic exists, also contains should logic, include the must match minimum. 1`] = `
{
  "query": {
    "bool": {
      "minimum_should_match": 1,
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
      "should": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyRootQuery Boolean logic exists, move it properly to it's own boolean section. 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applyRootQuery No boolean logic exists, just return the query as is. 1`] = `
{
  "query": {},
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Attempting to sort on a column that does not exist 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Basic sorting is correctly applied to the query 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn1.keyword": {
        "order": "desc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Basic sorting is correctly applied to the query 2`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn1.keyword": {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Basic sorting is correctly applied to the query 3`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn1.keyword": {
        "order": "asc",
      },
    },
    {
      "data.attributes.testColumn2": {
        "order": "desc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules No sorting to be performed, leave query the same without adding anything. 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Relationship sorting query generation 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn4": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType1",
            },
          },
          "path": "included",
        },
        "order": "desc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Relationship sorting query generation 2`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn4": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType1",
            },
          },
          "path": "included",
        },
        "order": "desc",
      },
    },
    {
      "data.attributes.testColumn5.keyword": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType2",
            },
          },
          "path": "included",
        },
        "order": "asc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Relationship sorting query generation 3`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn1.keyword": {
        "order": "asc",
      },
    },
    {
      "data.attributes.testColumn2": {
        "order": "desc",
      },
    },
    {
      "data.attributes.testColumn4": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType1",
            },
          },
          "path": "included",
        },
        "order": "desc",
      },
    },
    {
      "data.attributes.testColumn5.keyword": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType2",
            },
          },
          "path": "included",
        },
        "order": "asc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Sorting on columns without id 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "data.attributes.testColumn6.keyword": {
        "nested": {
          "filter": {
            "term": {
              "included.type": "relationshipType2",
            },
          },
          "path": "included",
        },
        "order": "desc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySortingRules Strings as column definitions 1`] = `
{
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
  "sort": Array [
    {
      "testColumn3": {
        "order": "asc",
      },
    },
  ],
}
`;

exports[`QueryBuilderElasticSearchExport functionality applySourceFiltering Ensure all source filtering are being applied to the query 1`] = `
{
  "_source": {
    "includes": Array [
      "data.id",
      "data.type",
      "data.relationships",
      "data.attributes.testColumn1",
      "data.attributes.includeThis1",
      "data.attributes.includeThis2",
      "data.attributes.testColumn2",
      "data.attributes.includeThis3",
      "data.attributes.testColumn4",
      "data.attributes.testColumn5",
      "data.attributes.testColumn6",
      "included.id",
      "included.type",
    ],
  },
  "query": {
    "bool": {
      "must": Array [
        {
          "term": {
            "data.attributes.materialSampleName.keyword": "Test",
          },
        },
        {
          "term": {
            "data.attributes.preparationDate": "2022-11-30",
          },
        },
      ],
    },
  },
}
`;

exports[`QueryBuilderElasticSearchExport functionality processResults Entity attributes only 1`] = `
Array [
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-B",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-58ef-7712-b32f-4ae08321e7e3",
    "included": undefined,
    "type": "material-sample",
  },
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-C",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-59a3-7c07-a4b9-a10f4ddd4a80",
    "included": undefined,
    "type": "material-sample",
  },
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-D",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-5a16-7653-83db-530af5cb4b7d",
    "included": undefined,
    "type": "material-sample",
  },
]
`;

exports[`QueryBuilderElasticSearchExport functionality processResults Relationships 1`] = `
Array [
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-J",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-5b71-7dff-921b-16c1ed4f011a",
    "included": undefined,
    "type": "material-sample",
  },
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-A",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": {
            "id": "2b349356-3ffb-46be-81f5-cb0d6ae9b4ef",
            "type": "collection",
          },
          "links": {
            "related": "/api/v1/material-sample/01919e87-58a0-70bd-8846-453100ccecb9/collection",
            "self": "/api/v1/material-sample/01919e87-58a0-70bd-8846-453100ccecb9/relationships/collection",
          },
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-58a0-70bd-8846-453100ccecb9",
    "included": {
      "collection": {
        "attributes": {
          "code": "SeqDB",
          "name": "Sequence Database",
        },
        "id": "2b349356-3ffb-46be-81f5-cb0d6ae9b4ef",
        "type": "collection",
      },
    },
    "type": "material-sample",
  },
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-29T14:25:55.864404Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "sample10-C",
        "materialSampleState": null,
        "materialSampleType": "CULTURE_STRAIN",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": {
            "id": "01919f58-a9ea-7838-9737-7a0e54cdc41b",
            "type": "collection",
          },
          "links": {
            "related": "/api/v1/material-sample/01919e87-59a3-7c07-a4b9-a10f4ddd4a80/collection",
            "self": "/api/v1/material-sample/01919e87-59a3-7c07-a4b9-a10f4ddd4a80/relationships/collection",
          },
        },
        "organism": {
          "data": Array [
            {
              "id": "6f8908fd-64c7-4524-8375-965d5c4573a4",
              "type": "organism",
            },
          ],
          "links": {
            "related": "/api/v1/material-sample/0192da0b-b7b2-7840-a902-a5d26ee7edea/organism",
            "self": "/api/v1/material-sample/0192da0b-b7b2-7840-a902-a5d26ee7edea/relationships/organism",
          },
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [],
        },
        "storageUnitUsage": {},
      },
    },
    "id": "01919e87-59a3-7c07-a4b9-a10f4ddd4a80",
    "included": {
      "collection": {
        "attributes": {
          "code": "CNC",
          "name": "Canadian National Collection",
        },
        "id": "01919f58-a9ea-7838-9737-7a0e54cdc41b",
        "type": "collection",
      },
    },
    "type": "material-sample",
  },
]
`;

exports[`QueryBuilderElasticSearchExport functionality processResults To-many relationships 1`] = `
Array [
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-26T14:41:00.656734Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "SAMPLE_a",
        "materialSampleState": null,
        "materialSampleType": "WHOLE_ORGANISM",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [
            {
              "id": "01919485-ed65-7a79-9080-91445b897ef4",
              "type": "project",
            },
          ],
          "links": {
            "related": "/api/v1/material-sample/01918f22-13a4-7f6d-894e-974bc1e14d23/projects",
            "self": "/api/v1/material-sample/01918f22-13a4-7f6d-894e-974bc1e14d23/relationships/projects",
          },
        },
        "storageUnitUsage": {
          "data": null,
        },
      },
    },
    "id": "01918f22-13a4-7f6d-894e-974bc1e14d23",
    "included": {
      "projects": Array [
        {
          "attributes": {
            "name": "Project A",
          },
          "id": "01919485-ed65-7a79-9080-91445b897ef4",
          "type": "project",
        },
      ],
    },
    "type": "material-sample",
  },
  {
    "data": {
      "attributes": {
        "createdBy": "dina-admin",
        "createdOn": "2024-08-26T14:41:00.656734Z",
        "dwcOtherCatalogNumbers": null,
        "group": "aafc",
        "materialSampleName": "SAMPLE_c",
        "materialSampleState": null,
        "materialSampleType": "WHOLE_ORGANISM",
      },
      "relationships": {
        "assemblages": {
          "data": Array [],
        },
        "attachment": {
          "data": Array [],
        },
        "collectingEvent": {
          "data": null,
        },
        "collection": {
          "data": null,
        },
        "organism": {
          "data": Array [],
        },
        "parentMaterialSample": {},
        "preparationMethod": {
          "data": null,
        },
        "preparationProtocol": {},
        "preparationType": {
          "data": null,
        },
        "preparedBy": {
          "data": Array [],
        },
        "projects": {
          "data": Array [
            {
              "id": "01919485-ed65-7a79-9080-91445b897ef4",
              "type": "project",
            },
            {
              "id": "01919486-2f9a-7d1c-92f3-05a2542e2eea",
              "type": "project",
            },
          ],
          "links": {
            "related": "/api/v1/material-sample/01918f22-1687-7634-bcd3-cd56d493bf27/projects",
            "self": "/api/v1/material-sample/01918f22-1687-7634-bcd3-cd56d493bf27/relationships/projects",
          },
        },
        "storageUnitUsage": {
          "data": null,
        },
      },
    },
    "id": "01918f22-1687-7634-bcd3-cd56d493bf27",
    "included": {
      "projects": Array [
        {
          "attributes": {
            "name": "Project A",
          },
          "id": "01919485-ed65-7a79-9080-91445b897ef4",
          "type": "project",
        },
        {
          "attributes": {
            "name": "Project B",
          },
          "id": "01919486-2f9a-7d1c-92f3-05a2542e2eea",
          "type": "project",
        },
      ],
    },
    "type": "material-sample",
  },
]
`;
